--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: 911.re Socks5 proxy
 
 # Name of the author
-author: Amit Merchant
+author: 911re
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: 911S5 Proxy Service is a Socks5 residential proxy provider taht offers IPs from over global 190 countries.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
