--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: 911re
 description: 911S5 Proxy Service is a Socks5 residential proxy provider taht offers IPs from over global 190 countries.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/911s5proxy.png
 
 #
 # Flags below are optional
@@ -21,35 +21,35 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
-  facebook:
+  email:
+  facebook: yiluproxy
   flickr:
-  github: amitmerchant1990/reverie
+  github: 911re
   instagram:
   linkedin: 
-  pinterest:
-  rss: rss
-  twitter: amit_merchant
+  pinterest:yiluproxy
+  rss:
+  twitter: YiLu_Proxy
   stackoverflow: 
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: @yilu_proxy
+  googleplus:
   playconsole:
-  mastodon: # <your-mastodon-instance>/@<your-user-name> eg. fosstodon.org/@username
+  mastodon:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
-#google_analytics_ga4: G-GABC1DEFG
+#google_analytics_ga4: G-QNY55HZ5Z1
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://911re.github.io
+enforce_ssl: https://911re.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -61,7 +61,7 @@ baseurl: "/"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /:title
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
